# ----------------------------------------------------------------------------
#
# DicomSel: DICOM Image Selector
#
# Copyright (C) 2005, 2006 IRCAD
# Authors: Benjamin Gaillard, Marc-Aurèle Mörk, Guillaume Spitz
#
# ----------------------------------------------------------------------------
#
#        File: Makefile.am
#
# Description: Automake Makefile
#
# ----------------------------------------------------------------------------
#
# This program is free software; you can redistribute it and/or modify it
# under the terms of the GNU General Public License as published by the Free
# Software Foundation; either version 2 of the License, or (at your option)
# any later version.
#
# This program is distributed in the hope that it will be useful, but WITHOUT
# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
# FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for
# more details.
#
# You should have received a copy of the GNU General Public License along
# with this program; if not, write to the Free Software Foundation, Inc., 59
# Temple Place - Suite 330, Boston, MA 02111-1307, USA.
#
# ----------------------------------------------------------------------------


# Subdirectories
SUBDIRS = \
    $(DCMTK_DIR) \
    libdicom \
    src \
    rfsample \
    doc
DIST_SUBDIRS = $(SUBDIRS)

# Extra files to include in the distribution archive
EXTRA_DIST = \
    Makefile.msc \
    extra.mk \
    head/README \
    head/info.txt \
    head/license-gpl.txt \
    head/license.txt \
    include/dicomsel/README \
    include/dicomsel/BitmapPanel.h \
    include/dicomsel/DicomCollection.h \
    include/dicomsel/DicomFile.h \
    include/dicomsel/DicomTree.h \
    include/dicomsel/MainFrame.h \
    include/dicomsel/TagDialog.h \
    include/dicomsel/TagSet.h \
    include/dicomsel/ipc.h \
    include/dicomsel/StoreDialog.h \
    include/dicomsel/Store.h \
    msvc/README \
    msvc/config.h \
    msvc/config.h.in \
    msvc/flags.mak \
    tools/README \
    tools/gencom.sh \
    tools/mkdcmtk.sh \
    tools/xbuildwx.sh

# End of File
