# ----------------------------------------------------------------------------
#
# DicomSel: DICOM Image Selector
#
# Copyright (C) 2005, 2006 IRCAD
# Authors: Benjamin Gaillard, Marc-Aurèle Mörk, Guillaume Spitz
#
# ----------------------------------------------------------------------------
#
#        File: Makefile.am
#
# Description: Automake Makefile
#
# ----------------------------------------------------------------------------
#
# << LICENSE >>
#
# ----------------------------------------------------------------------------


# Subdirectories
SUBDIRS = \
    libdicom \
    $(DCMTK_DIR) \
    src \
    doc
DIST_SUBDIRS = \
    $(SUBDIRS) \
    rfsample

# Extra files to include in the distribution archive
EXTRA_DIST = \
    Makefile.msc \
    extra.mk \
    head/README \
    head/info.txt \
    head/license-gpl.txt \
    head/license.txt \
    include/dicomsel/README \
    include/dicomsel/BitmapPanel.h \
    include/dicomsel/DcmtkCollection.h \
    include/dicomsel/DcmtkFile.h \
    include/dicomsel/DicomCollection.h \
    include/dicomsel/DicomFile.h \
    include/dicomsel/DicomTree.h \
    include/dicomsel/LibDicomCollection.h \
    include/dicomsel/LibDicomFile.h \
    include/dicomsel/MainFrame.h \
    include/dicomsel/Store.h \
    include/dicomsel/StoreDialog.h \
    include/dicomsel/StoreSCP.h \
    include/dicomsel/StoreSCU.h \
    include/dicomsel/TagDialog.h \
    include/dicomsel/TagSet.h \
    include/dicomsel/dcmtk.h \
    include/dicomsel/ipc.h \
    msvc/README \
    msvc/config.h \
    msvc/flags.mak \
    tools/README \
    tools/gencom.sh \
    tools/mkdcmtk.sh \
    tools/wxmsvc.sh \
    tools/xbuildwx.sh

# End of File
