# ----------------------------------------------------------------------------
#
# DicomSel: DICOM Image Selector
#
# Copyright (C) 2005, 2006 IRCAD
# Authors: Benjamin Gaillard, Marc-Aurèle Mörk, Guillaume Spitz
#
# ----------------------------------------------------------------------------
#
#        File: Makefile.am
#
# Description: Automake Makefile
#
# ----------------------------------------------------------------------------
#
# << LICENSE >>
#
# ----------------------------------------------------------------------------


# French report
reportdir = $(datadir)/doc/$(PACKAGE_TARNAME)-$(PACKAGE_VERSION)
dist_report_DATA = \
    report-fr/rapport-page_de_garde.pdf \
    report-fr/rapport.pdf

# Extra files to include in the distribution archive
EXTRA_DIST = \
    README \
    coding_conventions_fr.pdf \
    report-fr/rapport.doc

# End of File
