# ----------------------------------------------------------------------------
#
# DicomSel: DICOM Image Selector
#
# Copyright (C) 2005, 2006 IRCAD
# Authors: Benjamin Gaillard, Marc-Aurèle Mörk, Guillaume Spitz
#
# ----------------------------------------------------------------------------
#
#        File: Makefile.am
#
# Description: Automake Makefile
#
# ----------------------------------------------------------------------------
#
# << LICENSE >>
#
# ----------------------------------------------------------------------------


# French report
dist_pdf_DATA = \
    report-fr/rapport-2.pdf \
    report-fr/rapport-page_de_garde.pdf \
    report-fr/rapport.pdf

# Extra files to include in the distribution archive
EXTRA_DIST = \
    README \
    coding_conventions_fr.pdf \
    report-fr/rapport-2.odt \
    report-fr/rapport.doc

# End of File
