# ----------------------------------------------------------------------------
#
# DicomSel: DICOM Image Selector
#
# Copyright (C) 2005, 2006 IRCAD
# Authors: Benjamin Gaillard, Marc-Aurèle Mörk, Guillaume Spitz
#
# ----------------------------------------------------------------------------
#
# << LICENSE >>
#
# ----------------------------------------------------------------------------


SUBDIRS = src

noinst_HEADERS = \
    include/Virtuals/Type.h \
    include/Virtuals/mfo/Acquisition.h \
    include/Virtuals/mfo/Frame.h \
    include/Virtuals/mfo/Patient.h \
    include/Virtuals/mfo/Reconstruction.h \
    include/Virtuals/mfo/Study.h \
    include/Virtuals/mfo/mfo.h \
    include/dicom/DicomAbstractFactory.h \
    include/dicom/DicomDictionary.h \
    include/dicom/Exception.h \
    include/dicom/ExceptionDicom.h \
    include/dicom/io/DicomFile.h \
    include/dicom/io/SimpleDirectory.h \
    include/dicom/io/SimpleFile.h \
    include/dicom/io/TypedFile.h \
    include/dicom/lib/DicomLib.h \
    include/dicom/tag/AcquisitionDate.h \
    include/dicom/tag/AcquisitionNumber.h \
    include/dicom/tag/AcquisitionTime.h \
    include/dicom/tag/AcquisitionZone.h \
    include/dicom/tag/Birthday.h \
    include/dicom/tag/BitsAllocated.h \
    include/dicom/tag/Columns.h \
    include/dicom/tag/DicomTag.h \
    include/dicom/tag/Hospital.h \
    include/dicom/tag/ImagePosition.h \
    include/dicom/tag/ImageType.h \
    include/dicom/tag/Modality.h \
    include/dicom/tag/Name.h \
    include/dicom/tag/PatientID.h \
    include/dicom/tag/PixelData.h \
    include/dicom/tag/PixelRepresentation.h \
    include/dicom/tag/PixelSpacing.h \
    include/dicom/tag/Rows.h \
    include/dicom/tag/SeriesUID.h \
    include/dicom/tag/Sexe.h \
    include/dicom/tag/SliceThickness.h \
    include/dicom/tag/StudyUID.h \
    include/dicom/tag/TagWithStringValue.h \
    include/dicom/tag/TransfertSyntax.h \
    include/dicom/tag/WindowWidth.h \
    include/dicom/visitor/AbstractDicomFile.h \
    include/dicom/visitor/CreateImage.h \
    include/dicom/visitor/CreateInrimage.h \
    include/dicom/visitor/CreateList.h \
    include/dicom/visitor/Dicom.h

EXTRA_DIST = \
    README \
    CHANGES \
    HowTo.rtf \
    UML/IO.png \
    UML/Package.png \
    UML/Seq.png \
    UML/Tag.png \
    UML/UC.png \
    UML/Visitor_DP.png \
    UML/Visitor_class.png \
    UML/Visitor.png \
    ressource/dicom.dic \
    test/testDicom.cpp

# End of File
